# python-project-49

./: .gitignore  KODA.md  Makefile  README.md  pyproject.toml  setup.cfg
Games/brain_games/: is_even.py
brain_games/: calc_it.py  cli.py  find_gcd.py  find_number.py  game_play.py  greeting.py  is_even.py  is_prime.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_play.py  brain_prime.py  brain_progression.py
