[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Andrey Bogatyrev <t2way@yandex.ru>"]
readme = "README.md"
#packages = [{include = "hexlet_code"}]
packages = [{include = "brain_games"}]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
