[tool.poetry]
name = "hexlet-code"
version = "0.6.1"
description = ""
authors = ["Andrey Bogatyrev <t2way@yandex.ru>"]
readme = "README.md"
packages = [{include = "brain_games"}]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.scripts]
#brain-games = "brain_games.scripts.brain_play:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
